# libbrook

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile.in  Makefile.am  README.md  TODO  configure.ac
bindings/pascal/: .gitignore  Brook.inc  Brook.pas  BrookFramework.dpk  BrookFramework.dproj  BrookFramework.lpk  BrookHTTPServer.pas  BrookHTTPServerConfiguration.pas  BrookHTTPServerRequest.pas  BrookHTTPServerRequestUploads.pas  BrookHTTPServerResponse.pas  BrookHandledClasses.pas  BrookHashStrings.pas  BrookLibraryLoader.pas  BrookProjectGroup.groupproj  BrookRegister.pas  BrookUtils.pas  Makefile.am  libbrook.pas
bindings/pascal/Examples/: Examples.inc  Makefile.am  dmlMainUplds.dfm  dmlMainUplds.lfm  dmlMainUplds.pas  frmMain.dfm  frmMain.lfm  frmMain.pas  frmMainUplds.dfm  frmMainUplds.lfm  frmMainUplds.pas  hellohttpsrv.dpr  hellohttpsrv.dproj  hellohttpsrv.lpi  httpsrvuploads.dpr  httpsrvuploads.dproj  httpsrvuploads.lpi
bindings/python/: Makefile.am  brook.py  draft_hs.py
cmake/: BkAutotoolsPkg.cmake  BkBuildAutotoolsProject.cmake  BkCPack.cmake  BkCompatibilityChecker.cmake  BkDownloadAutotoolsPkg.cmake  BkDoxygen.cmake  BkFlags.cmake  BkGNUSource.cmake  BkIsARM.cmake  BkMHD.cmake  BkPC.cmake  BkPVSStudio.cmake  BkSummary.cmake  BkUninstall.cmake  BkVersion.cmake  BkWarnings.cmake  BrookDoxygen.cmake  BrookVersion.cmake  BrookWarnings.cmake  Doxygen.cmake  DoxygenAPIRef.cmake  GNUSource.cmake  WarnAll.cmake  Warnings.cmake  libbrook.pc.cmake.in
cmake-modules/: Makefile.am
doc/: Doxyfile  Doxyfile.in  Makefile.am
doxygen/: Doxyfile.in  example_signal.h  example_str.h  example_strmap.h  exemplo_str.h
examples/: CMakeLists.txt  example_httpauth.c  example_httpsrv.c  example_signal.c  example_str.c  example_strmap.c  helloworld_httpcli.c  helloworld_httpsrv.c  hs.c  httpsrv_errs.c  httpsrv_upld.c
include/: Makefile.am  brook.h
src/: CMakeLists.txt  Makefile.am  b4r_hs.c  b4r_hs.h  b4r_httpsrv.c  b4r_httpsrv.h  b4r_httpsrv_auth.c  b4r_httpsrv_auth.h  b4r_httpsrv_cfg.c  b4r_httpsrv_cfg.h  b4r_httpsrv_req.c  b4r_httpsrv_req.h  b4r_httpsrv_req_uplds.c  b4r_httpsrv_req_uplds.h  b4r_httpsrv_res.c  b4r_httpsrv_res.h  b4r_httpsrv_res_cache.c  b4r_httpsrv_res_cache.h  b4r_httpsrv_strs.h  b4r_macros.h  b4r_router.c  b4r_router.h  b4r_utils.c  b4r_utils.h  bf_httpsrv.c  bf_httpsrv.h  bf_httpsrv_cfg.c  bf_httpsrv_cfg.h  bf_httpsrv_req.c  bf_httpsrv_req.h  bf_httpsrv_req_uplds.c  bf_httpsrv_req_uplds.h  bf_httpsrv_res.c  bf_httpsrv_res.h  bf_httpsrv_res_cache.c  bf_httpsrv_res_cache.h  bf_httpsrv_strs.h  bf_router.c  bf_router.h  bk_httpauth.c  (+23 more)
test/: CMakeLists.txt  b4r_assert.h  bk_assert.h  test_signal.c  test_str.c  test_strbuf.c  test_strmap.c  test_utils.c
tests/: test_bf_cfg.c  test_utils.c
