SUBDIRS = Examples .
libbrook_pascal_binding = BrookFramework.dpk BrookFramework.dproj BrookFramework.lpk BrookHandledClasses.pas BrookHashStrings.pas BrookHTTPServerConfiguration.pas BrookHTTPServer.pas BrookHTTPServerRequest.pas BrookHTTPServerRequestUploads.pas BrookHTTPServerResponse.pas Brook.inc BrookLibraryLoader.pas Brook.pas BrookProjectGroup.groupproj BrookRegister.pas BrookUtils.pas libbrook.pas
EXTRA_DIST = ${libbrook_pascal_binding}
noinst_EXTRA_DIST = ${libbrook_pascal_binding}