SUBDIRS = .
libbrook4rest_pascal_binding_examples =
  dmlMainUplds.dfm \
  dmlMainUplds.lfm \
  dmlMainUplds.pas \
  Examples.inc \
  frmMain.dfm \
  frmMain.lfm \
  frmMain.pas \
  frmMainUplds.dfm \
  frmMainUplds.lfm \
  frmMainUplds.pas \
  hellohttpsrv.dpr \
  hellohttpsrv.dproj \
  hellohttpsrv.lpi \
  httpsrvuploads.dpr \
  httpsrvuploads.dproj \
  httpsrvuploads.lpi
EXTRA_DIST = ${libbrook4rest_pascal_binding_examples}
noinst_EXTRA_DIST = ${libbrook4rest_pascal_binding_examples}